barcodebuddy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barcodebuddy
  namespace: barcodebuddy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: barcodebuddy
  template:
    metadata:
      labels:
        app: barcodebuddy
    spec:
      containers:
        - name: barcodebuddy
          image: ghcr.io/fluv/barcodebuddy-docker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 128Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: barcodebuddy-config
